# pauli-hermes-agent

./: .env.agent-zero.example  .env.studio.example  .env.vps.example  .gitignore  .vercelignore  AGENTS.md  AGENT_INSTRUCTIONS.md  AGENT_TASK_STATUS.md  BEADS_DELIVERY.md  BEADS_INTEGRATION.md  BEADS_QUICK_REFERENCE.md  BEADS_SETUP.md  COMPONENT_LIBRARY.md  DEPLOYMENT_INTEGRATION_SUMMARY.md  DEPLOYMENT_ISSUES_AUDIT.md  DEPLOYMENT_VISUAL_MAP.md  Dockerfile  HERMES.md  INFISICAL_DEPLOYMENT.md  INFISICAL_QUICK_START.txt  INFISICAL_README.txt  INFISICAL_SETUP.md  INFISICAL_VERIFICATION_REPORT.md  LICENSE.txt  PDF To Markdown Converter.txt  QUICK_START.md  README_DEPLOYMENT_PACKAGE.md  The ZTE Meta-Prompt 2026 agency deploy.txt  VPS_DEPLOYMENT_MANUAL.md  cli-config.yaml.example  cli.py  docker-compose.yml  model_tools.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  run_agent.py  stitch-mcp.config.json  stitch_bridge.py  (+3 more)
LTX-Video-main/: llm.txt
StoryToolkitAI-main/: documentary-processing.json  llm.txt
agent/: beads_integration.py  prompt_builder.py  smart_model_routing.py
agents/: registry.yaml
design-system/: CHANGELOG.md  CONFLICT_MATRIX.json  CYNTHIA-DESIGN-PHASE1-AUTHORIZATION.md  CYNTHIA-DESIGN-PHASE1-COMPLETION-REPORT.md  DESIGN-PHASE1-COMPLETION-REPORT.json  HANDOFF_REPORT.json  README.md  SCAFFOLD_MANIFEST.json  llm.txt  package.json  tokens.json
docs/: night_shift_setup.md
emerald-tablets/: MANIFEST.md
gastown/: llm.txt
gateway/: beads_api.py  run.py
hermes update/: CODEX_BUILD_SPEC_WITH_OPENSRC.md  COMPLETE_DELIVERABLES_INDEX.txt  OPENSRC_INTEGRATION_GUIDE.md
hermes-foundry/: .env.example  .gitmodules  Cargo.toml  DELIVERABLES.md  Makefile  README.md  _MANIFEST.md  branding.json  docker-compose.yml  package.json
hermes-foundry/_JCP/: features.json  progress.md  recovery.md
hermes-foundry/apps/cockpit-web/: README.md
hermes-foundry/apps/desktop/: index.html  package.json  vite.config.ts
hermes-foundry/apps/desktop/src/: App.tsx  app.css
hermes-foundry/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
hermes-foundry/apps/desktop/src-tauri/src/: lib.rs  main.rs  security.rs  sidecar.rs  state.rs
hermes-foundry/apps/desktop/src-tauri/src/commands/: chat.rs  llm.rs  media.rs  mod.rs  services.rs  settings.rs  voice.rs
hermes-foundry/apps/desktop/src/components/: AgentStatus.tsx  Chat.tsx  MediaPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  VoiceInput.tsx
hermes-foundry/apps/desktop/src/lib/: tauri-bridge.ts  types.ts
hermes-foundry/apps/desktop/src/stores/: chat.ts  settings.ts
hermes-foundry/crates/foundry-api/: Cargo.toml
hermes-foundry/crates/foundry-api/src/: main.rs
hermes-foundry/crates/foundry-appwrite/: Cargo.toml
hermes-foundry/crates/foundry-appwrite/src/: lib.rs
hermes-foundry/crates/foundry-billing/: Cargo.toml
hermes-foundry/crates/foundry-billing/src/: lib.rs
hermes-foundry/crates/foundry-browser/: Cargo.toml
hermes-foundry/crates/foundry-browser/src/: lib.rs
hermes-foundry/crates/foundry-coder/: Cargo.toml
hermes-foundry/crates/foundry-coder/src/: lib.rs
hermes-foundry/crates/foundry-core/: Cargo.toml
hermes-foundry/crates/foundry-core/src/: lib.rs
hermes-foundry/crates/foundry-mcp/: Cargo.toml
hermes-foundry/crates/foundry-mcp/src/: lib.rs
hermes-foundry/crates/foundry-memory/: Cargo.toml
hermes-foundry/crates/foundry-memory/src/: lib.rs
hermes-foundry/crates/foundry-paperclip/: Cargo.toml
hermes-foundry/crates/foundry-paperclip/src/: lib.rs
hermes-foundry/crates/foundry-policy/: Cargo.toml
hermes-foundry/crates/foundry-policy/src/: lib.rs
hermes-foundry/crates/foundry-router/: Cargo.toml
hermes-foundry/crates/foundry-router/src/: lib.rs
hermes-foundry/crates/foundry-runs/: Cargo.toml
hermes-foundry/crates/foundry-runs/src/: lib.rs
hermes-foundry/crates/foundry-setup/: Cargo.toml
hermes-foundry/crates/foundry-setup/src/: lib.rs
hermes-foundry/crates/foundry-subagents/: Cargo.toml
hermes-foundry/crates/foundry-subagents/src/: lib.rs
hermes-foundry/crates/foundry-telemetry/: Cargo.toml
hermes-foundry/crates/foundry-telemetry/src/: lib.rs
hermes-foundry/crates/hermes-core/: Cargo.toml
hermes-foundry/crates/hermes-core/src/: client.rs  engine.rs  lib.rs  session.rs
hermes-foundry/crates/hermes-llm/: Cargo.toml
hermes-foundry/crates/hermes-llm/src/: inference.rs  lib.rs
hermes-foundry/crates/hermes-media/: Cargo.toml
hermes-foundry/crates/hermes-media/src/: lib.rs  processor.rs
hermes-foundry/crates/hermes-types/: Cargo.toml
hermes-foundry/crates/hermes-types/src/: chat.rs  errors.rs  lib.rs  llm.rs  media.rs  voice.rs
hermes-foundry/crates/hermes-voice/: Cargo.toml
hermes-foundry/crates/hermes-voice/src/: lib.rs  transcriber.rs
hermes-foundry/docs/: approvals-guide.md  backup-restore-guide.md  billing-usage-guide.md  internal-api-contract.md  mcp-tool-index.md  missing-secrets-guide.md  operational-checklist.md  operator-quickstart.md  public-api-contract.md  rust-roadmap.md  sdk-plan.md  setup-guide.md  system-overview.md  tenant-onboarding-guide.md
hermes-foundry/docs/runbooks/: appwrite-provisioning-failure.md  artifact-disk-growth.md  billing-threshold-exceeded.md  browser-worker-stuck.md  coding-worker-stuck.md  database-migration-failure.md  missing-secrets.md  provider-outage.md  redis-outage.md  tenant-misconfiguration.md
hermes-foundry/infra/scripts/: smoke.sh
hermes-foundry/migrations/: 001_init.sql  002_productization.sql
hermes-foundry/policies/: action_risk.json  billing_caps.json  browser_domains.json  channel_policy.json  feature_gates.json  provider_eligibility.json  retention.json  subagent_limits.json
hermes-foundry/scripts/: build-desktop.sh  install-models.sh  setup.sh
hermes_cli/: beads_commands.py  commands.py  config.py
mcp_agent_mail/: llm.txt
n8n-workflows/: llm.txt
nginx/: hermes.conf
night_shift/: __init__.py  app.py  config.py  db.py  main.py  models.py  policy.py  router.py
nightshift/: .env.example  CLAUDE.md  Makefile  README.md  coolify.json  docker-compose.yml
(+407 files in other folders)
