[workspace]
members = [
  "crates/foundry-api",
  "crates/foundry-core",
  "crates/foundry-router",
  "crates/foundry-policy",
  "crates/foundry-runs",
  "crates/foundry-billing",
  "crates/foundry-memory",
  "crates/foundry-mcp",
  "crates/foundry-subagents",
  "crates/foundry-browser",
  "crates/foundry-coder",
  "crates/foundry-appwrite",
  "crates/foundry-paperclip",
  "crates/foundry-telemetry",
  "crates/foundry-setup",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
