[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/hermes-types",
    "crates/hermes-core",
    "crates/hermes-voice",
    "crates/hermes-media",
    "crates/hermes-llm",
]
resolver = "2"

[workspace.package]
version        = "0.1.0"
edition        = "2021"
authors        = ["Hermes Foundry <team@hermesagent.ai>"]
license        = "MIT OR Apache-2.0"
rust-version   = "1.77"
repository     = "https://github.com/AtomicBot-ai/hermes-foundry"
description    = "Hermes Foundry — enterprise-grade Rust-native agent OS"

[workspace.dependencies]
# ── Tauri desktop framework ───────────────────────────────────────────────────
tauri                  = { version = "2",   features = ["protocol-asset", "tray-icon"] }
tauri-build            = { version = "2",   features = [] }
tauri-plugin-shell     = "2"
tauri-plugin-fs        = "2"
tauri-plugin-dialog    = "2"
tauri-plugin-notification = "2"
tauri-plugin-store     = "2"
tauri-plugin-window-state = "2"
tauri-plugin-http      = "2"
tauri-plugin-process   = "2"
tauri-plugin-updater   = "2"

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio        = { version = "1",    features = ["full"] }
tokio-stream = { version = "0.1",  features = ["sync"] }
futures      = "0.3"
async-trait  = "0.1"

# ── HTTP ──────────────────────────────────────────────────────────────────────
reqwest      = { version = "0.12", features = ["json", "stream", "multipart", "gzip"] }
axum         = { version = "0.7",  features = ["ws", "multipart", "macros"] }
tower        = { version = "0.4",  features = ["full"] }
tower-http   = { version = "0.5",  features = ["cors", "trace", "fs"] }
eventsource-client = "0.13"

# ── Serialization ─────────────────────────────────────────────────────────────
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"

# ── Error handling ────────────────────────────────────────────────────────────
anyhow       = "1"
thiserror    = "2"

# ── Logging / tracing ─────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── Security & crypto ─────────────────────────────────────────────────────────
ring     = "0.17"
base64   = "0.22"
uuid     = { version = "1", features = ["v4", "serde"] }
rand     = "0.8"
zeroize  = { version = "1", features = ["derive"] }
keyring  = "2"
argon2   = "0.5"
aes-gcm  = "0.10"

# ── Utilities ─────────────────────────────────────────────────────────────────
chrono   = { version = "0.4", features = ["serde"] }
url      = "2"
dirs     = "5"
regex    = "1"
walkdir  = "2"
tempfile = "3"

# ── Hermes Foundry internal crates ────────────────────────────────────────────
hermes-types = { path = "crates/hermes-types" }
hermes-core  = { path = "crates/hermes-core" }
hermes-voice = { path = "crates/hermes-voice" }
hermes-media = { path = "crates/hermes-media" }
hermes-llm   = { path = "crates/hermes-llm" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "debuginfo"
panic         = "abort"

[profile.dev]
opt-level     = 1
debug         = true
