[package]
name = "foundry-api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
foundry-billing = { path = "../foundry-billing" }
foundry-mcp = { path = "../foundry-mcp" }
foundry-policy = { path = "../foundry-policy" }
foundry-router = { path = "../foundry-router" }
foundry-runs = { path = "../foundry-runs" }
foundry-setup = { path = "../foundry-setup" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
